# PadavanPy

./: .gitignore  README.md  download.ps1  metrics.py
documents/: getting_started_with_python.md
notes/: leetcode.txt
src/Kotlin/pptrepo/: build.gradle.kts  settings.gradle.kts
src/c++/: Monte_Carlo_Pi.md  Visual_Studio_Solution_Setup.md  expression_parser.cpp  string_operations.c  string_operations.cpp  string_operations2.cpp
src/c++/CPE_Exams/: links.txt
src/c++/Transition_From_Java/: Transition_From_Java.md
src/c/Binary/: binary.c
src/c/C_hash/: hash.c
src/c/Pointers/: questions.c
src/c/StackDemo/: better.c  input_names.txt
src/c/Test/: main.c  stranno.c
src/c/experiments/: create_big_file.py  fgets_test.c
src/c/gui_apps/: sdl_boilerplate.c
src/c/leetcode/: add_binary_problem.txt
src/c/sample_homeworks/: my_string.c
src/c/sample_lessons/: matrices.c
src/c/sample_projects/: TODO.txt
src/c/some_codes_to_be_sorted/: CMakeLists.txt  IsPalindromeNumber.c  my_string_h.c  task1.c  task2.c  task3.c  task4.c  valid_parenthesies.c
src/java/good_exercise_LC/: IntegerToRoman.java  RomanToInteger.java
src/java/relations-implementaion/: pom.xml
src/javascript/snake/: dqueue.js  snake.css  snake.html  snake.js  test-dqueue.js  utils.js
src/loops_lessons/: for_loops.py  output_and_code.py  read_me_in_browser.html  sep.py  while_loops.py
src/python/: homework_ideas.txt
src/shell_scripts_demo/: battery  hard.save  lazy_git  medium
src/unsorted_code/: chaos_equations.py  exception_handling.py  functions.py  prime_nums.py
(+367 files in other folders)
