cmake_minimum_required(VERSION 3.16)
project(lab1_crypto C)

set(CMAKE_C_STANDARD 11)

add_executable(task1 task1.c)
add_executable(task2 task2.c)
add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task5 task5.c)
add_executable(task6 task6.c)
add_executable(task7 task7.c)
add_executable(task8 task8.c)
add_executable(task9 task9.c)
